# shelter_server

./: .gitignore  CMakeLists.txt  Pipeline.cmake  README.md  sonar-project.properties
include/: server.h  server_mocks.h  tcp_client.h
lib/alertInfection/include/: alertInfection.h
lib/alertInfection/src/: alertInfection.c
lib/emergNotif/include/: emergNotif.h
lib/emergNotif/src/: emergNotif.c
lib/suppliesData/: CMakeLists.txt
lib/suppliesData/include/: supplies_module.h
lib/suppliesData/src/: supplies_module.c
scripts/: build.sh  clangformat.sh  qa_local2.sh
src/clients/: tcp_client.c  unix_client_dgram.c  unix_client_stream.c
src/server/: main.c  server.c  server_mocks.c
tests/: CMakeLists.txt
tests/unit/: test_server.c
